--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "hbs": "^4.1.2",
     "leaflet": "^1.7.1",
     "mariadb": "^2.5.4",
+    "pug": "^3.0.2",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {},
